--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2021.5.30
 chardet==4.0.0
+dj-database-url==0.5.0
 Django==3.2.4
 django-crontab==0.7.1
 gunicorn==20.1.0
