--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-crontab==0.7.1
 gunicorn==20.1.0
 idna==2.10
 lxml==4.6.3
+psycopg2==2.8.6
 python-decouple==3.4
 pytz==2021.1
 requests==2.25.1
