--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,17 @@ chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.2.4
 django-crontab==0.7.1
+djongo==1.3.6
+dnspython==2.1.0
 gunicorn==20.1.0
 idna==2.10
 lxml==4.6.3
 psycopg2==2.8.6
+pymongo==3.11.4
 python-decouple==3.4
 pytz==2021.1
 requests==2.25.1
 soupsieve==2.2.1
-sqlparse==0.4.1
+sqlparse==0.2.4
 urllib3==1.26.5
 whitenoise==5.2.0
